--- a/flowershop.css
+++ b/flowershop.css
@@ -60,8 +60,91 @@ font-style: normal;
 font-weight: 800;
 line-height: normal;
 }
-.flowertree
-{
+*.cover{
+  width: 900px;
+  height: 400px;
+  margin: auto;
+  justify-content: center;
   
-  border-radius: 70px 0px 0px 0px;
+  padding: 20px;
+  display: flex;
 }
+.box{
+  width: 300px;
+  height: 500px;
+  margin: 0px 50px 30px 20px;
+  
+}
+.box.img{
+  width: 370px;
+  height: 370px; 
+  
+}
+.off{
+  color: #c00e0e;
+}
+.hotdeal{
+  background-color:rgba(229, 84, 115, 0.10);
+  width: 100%;
+  height: 60%;
+  justify-content: space-around;
+  text-align: center;
+  margin-top: 10%;
+  display: block;
+}
+
+.ib{
+  display: block;
+  
+}
+.ib.img1{
+  padding: 50px 240px 4017px 1047px;
+  width: 635px;
+  height: 800px;
+  flex-shrink: 0;
+}
+.button1
+{
+  text-decoration: none;
+  color: #fcfcfc;
+  background-color: #E55473;
+  border-radius: 8px;
+  border: 0;
+  display: inline-flex;
+  padding: 20px 43px 20px 43px;
+  align-items: center;
+
+}
+
+.banner1{
+  width: 1440px;
+  height: 449px;
+  background-image: url('Flower Asset/Rectangle\ 9.png');
+  margin-left: 120px;
+  display:flex;
+  align-items: center;
+  text-align: center;
+  
+}
+.title3{
+color: #272727;
+text-align: center;
+justify-content: center;
+}
+.footer-colummn{
+  background-color:rgb(0, 0, 0);
+  width: 100%;
+  height: 300px;
+  margin-top: 20px;
+
+}
+.flower{
+  color:#E55473; 
+}
+.shop {
+  color: aliceblue;
+}
+.paragraph5{
+  color: aliceblue;
+}
+
